<resources>
    <string name="app_name">Cemetery Surveyor</string>
    <string name="action_reload_template">Reload JSON template</string>
    <string name="action_add_attribute">Add attribute</string>
    <string name="action_delete_items">Delete this item</string>
    <string name="action_export_data">Export data</string>
    <string name="action_help_link">Help</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="new_cemetery_title">Provide new cemetery name:</string>

    <string name="action_show_bookmarks">Display bookmarks</string>
    <string name="action_show_cemeteries">Display cemeteries</string>
    <string name="action_show_survey">Show survey</string>
    <string name="action_show_photos">Show photos</string>

    <string name="action_create_bookmark">Create bookmark</string>
    <string name="delete_item_heading">Delete item?</string>
    <string name="action_take_picture">Take a picture</string>

    <string name="clear_grave_attributes">Clear grave</string>
    <string name="title_activity_attribute_adder">Add attribute</string>
    <string name="title_delete_items">Delete items</string>

    <string name="loading_json">Loading and parsing\nJSON survey template</string>

    <string name="required_field">*</string>
    <string name="error_reporting_activity">Error Reporting</string>

    <string name="help_url">https://github.com/serialc/CemeterySurveyor</string>
    <string name="acra_message">"The application has crashed. The error is being sent to the developer."</string>
</resources>
