<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.frakturmedia.cemeterysurvey.CemeteryActivity">
    <item
        android:id="@+id/action_display_survey"
        android:orderInCategory="1"
        android:icon="@drawable/ic_assignment_black_36dp"
        android:title="@string/action_show_survey"
        app:showAsAction="always" ></item>
    <item
        android:id="@+id/action_display_photos"
        android:orderInCategory="2"
        android:icon="@drawable/ic_photo_black_36dp"
        android:title="@string/action_show_photos"
        app:showAsAction="always" ></item>

    <item
        android:id="@+id/action_take_picture"
        android:orderInCategory="3"
        android:icon="@drawable/ic_photo_camera_white_36dp"
        android:title="@string/action_take_picture"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_create_bookmark"
        android:icon="@drawable/ic_bookmark_white_36dp"
        android:orderInCategory="4"
        android:title="@string/action_create_bookmark"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_delete_item"
        android:orderInCategory="1"
        android:title="@string/action_delete_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_attribute"
        android:orderInCategory="2"
        android:title="@string/action_add_attribute"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_grave"
        android:orderInCategory="3"
        android:title="@string/clear_grave_attributes"
        app:showAsAction="never" />
</menu>